<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Address Book</string>
    <string name="title_section3">Search</string>
    <string name="title_section2">Add</string>
    <string name="title_section1">Contacts</string>
    <string name="add">Add</string>
    <string name="del">Delete</string>
    <string name="menu_settings">Settings</string>
    <string name="test">Hello sweet prince</string>
    <string name="no_data">You have no contacts!</string>
    
    <string name="first_name">Contact Name</string>
    <string name="tel_num">Telephone Number</string>
    <string name="email">Email</string>
</resources>