<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/first_name"
	    android:textStyle="bold" />

	<TextView
	    android:id="@+id/list_first_name"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal" />

		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/tel_num"
		    android:textStyle="bold" />

    <TextView
        android:id="@+id/list_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      />

    	<TextView
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/email"
    	    android:id="@+id/email_bold"
    	    android:textStyle="bold" />

    <TextView
        android:id="@+id/list_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            
            android:gravity="center_horizontal" >
<!-- android:background="@android:drawable/bottom_bar" -->
            <ImageButton
                android:id="@+id/but_left"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:contentDescription="@string/add"
                android:src="@drawable/left"
                android:text="@string/add" />

            <ImageButton
                android:id="@+id/but_right"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:contentDescription="@string/del"
                android:src="@drawable/right"
                android:text="@string/del" />
            
        </LinearLayout>
    </LinearLayout>
</LinearLayout>